# backitCpp

./: .gitignore  Diary.txt  Makefile  README.md
client/: CMakeLists.txt
client/docs/: Overview.md  Starter.md
client/exec/: init.cpp  sync.cpp  test1.cpp  update.cpp
client/include/: client.h  list.hpp  util.hpp
client/src/: app.cpp  load.cpp  sync.cpp  util.cpp
client/test/: test1.cpp
compare/: dentry.h  main.cpp
compare/docs/: Starter.md
docs/: Starter.md  comm.txt
include/: dentry.h  header.h
localmeta/docs/: Overview.md
localmeta/include/: mem.hpp
src/client/: cl_ui.cpp  cl_util.cpp  client.cpp  client.h  config.cpp  main.cpp
src/common/: dentry.cpp  util.cpp
src/server/: main.cpp  server.cpp  server.h
